[package]
name = "breath_first_maze_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
yew = { version = "0.20.0", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }